2003-07-17  John Luke  <jluke@cfl.rr.com>
	
	* en/Gtk/CellRendererMode.xml: documented
	* en/Gtk/CellRendererState.xml: documented
	* en/Gtk/CellRenderer.xml: documented
	
2003-07-17  Duncan Mak  <duncan@ximian.com>

	* Added new documentation files for the new classes, and fixed the
	off-by-one enum member name bug that was introduced in the previous
	commit.

2003-07-16  John Luke  <jluke@cfl.rr.com>
	
	* en/Gtk/CellRendererText.xml: documented, except one event and method
	* en/Gtk/CellRendererToggle.xml: documented
	* en/Gtk/CellRendererPixbuf.xml: documented
	* en/GConf/Client.xml: documented
	* en/Gnome/About.xml: documented
	
2003-07-16  Duncan Mak  <duncan@ximian.com>

       * All enumerations: Fixed the TypeSignature and MemberSignature in all
       documentation files for Enumerations.

2003-07-15  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/ItemFactory.xml: Rename GetItemByAction and
	GetWidgetByAction to GetItem and GetWidget, to reflect metadata
	changes.

	* en/Gtk/TextBuffer.xml: Remove all references to *ByName methods,
	as they are now all overrides.

	* en/Gtk/HTML.xml: Update to use the new Begin overloads, since
	bug #46427 is fixed.

2003-07-14  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/TextView.xml: all documented except for events.

	* en/Gtk/TextTag.xml: added the missing properties.

2003-07-13  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/TextTag.xml:
	* en/Gtk/TextTagTable.xml: 
	* en/Gtk/TextMark.xml:
	* en/Gtk/TextChildAnchor.xml: documented.

2003-07-12  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/TextBuffer.xml: all documented except for events.

2003-07-07  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/TearoffMenuItem.xml: documented.

2003-07-08  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/Fixed.xml:
	* en/Gtk/Image.xml:
	* en/Gtk/ToggleButton.xml:
	* en/Gtk/Frame.xml
	* en/Gtk/HBox.xml: small fixes

2003-07-04  John Luke  <jluke@cfl.rr.com>
	
	* en/Gtk/Dialog.xml: fixes
	* en/Gtk/Application.xml: add example, fix methods
