@@ -1,5 +1,5 @@
 <Type Name="ImageMenuItem" FullName="Gtk.ImageMenuItem">
-  <TypeSignature Language="C#" Value="public class ImageMenuItem : Gtk.MenuItem, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class ImageMenuItem : Gtk.MenuItem, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="John Luke" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,11 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>A <see cref="T:Gtk.MenuItem"/> with an icon.</summary>
+    <remarks>
+	  <para><see cref="T:Gtk.ImageMenuItem"/> is a <see cref="T:Gtk.MenuItem"/> which has an icon next to the text label.</para>
+	  <para>Note that the user can disable display of menu icons, so make sure to still fill in the text label.</para>
+	</remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.MenuItem</BaseTypeName>
@@ -39,10 +42,10 @@
         <Parameter Name="label" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="label">To be added: an object of type 'string'</param>
-        <returns>To be added: an object of type 'Gtk.ImageMenuItem'</returns>
-        <remarks>To be added</remarks>
+        <summary>Creates a new <see cref="T:Gtk.ImageMenuItem"/> containing a label.</summary>
+        <param name="label">an object of type <see cref="T:System.String"/></param>
+        <returns>an object of type <see cref="T:Gtk.ImageMenuItem"/></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Finalize">
@@ -79,9 +82,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.ImageMenuItem'</returns>
-        <remarks>To be added</remarks>
+        <summary>Creates a new <see cref="T:Gtk.ImageMenuItem"/>.</summary>
+        <returns>an object of type <see cref="T:Gtk.ImageMenuItem"/></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -93,11 +96,11 @@
         <Parameter Name="accel_group" Type="Gtk.AccelGroup" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="stock_id">To be added: an object of type 'string'</param>
-        <param name="accel_group">To be added: an object of type 'Gtk.AccelGroup'</param>
-        <returns>To be added: an object of type 'Gtk.ImageMenuItem'</returns>
-        <remarks>To be added</remarks>
+        <summary>Creates a new <see cref="T:Gtk.ImageMenuItem"/> containing the image and text from a stock item.</summary>
+        <param name="stock_id">an object of type <see cref="T:System.String"/></param>
+        <param name="accel_group">an object of type <see cref="T:Gtk.AccelGroup"/></param>
+        <returns>an object of type <see cref="T:Gtk.ImageMenuItem"/></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -108,10 +111,10 @@
         <Parameter Name="label" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="label">To be added: an object of type 'string'</param>
-        <returns>To be added: an object of type 'Gtk.ImageMenuItem'</returns>
-        <remarks>To be added</remarks>
+        <summary>Creates a new <see cref="T:Gtk.ImageMenuItem"/> containing a label.</summary>
+        <param name="label">an object of type <see cref="T:System.String"/></param>
+        <returns>an object of type <see cref="T:Gtk.ImageMenuItem"/></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -121,8 +124,8 @@
         <ReturnType>System.UInt32</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>The GLib Type for Gtk.ImageMenuItem</summary>
-        <returns>The GLib Type for the Gtk.ImageMenuItem class.</returns>
+        <summary>The <see cref="T:GLib Type"/> for <see cref="T:Gtk.ImageMenuItem"/></summary>
+        <returns>The <see cref="T:GLib Type"/> for the <see cref="T:Gtk.ImageMenuItem"/> class.</returns>
         <remarks />
       </Docs>
     </Member>
@@ -136,10 +139,10 @@
         <Parameter Name="value" Type="Gtk.Widget" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Gtk.Widget'</param>
-        <returns>To be added: an object of type 'Gtk.Widget'</returns>
-        <remarks>To be added</remarks>
+        <summary>Child widget to appear next to the menu text.</summary>
+        <param name="value">an object of type <see cref="T:Gtk.Widget"/></param>
+        <returns>an object of type <see cref="T:Gtk.Widget"/></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName=".ctor">
