@@ -3,6 +3,7 @@
 	* en/Gtk/CellRendererMode.xml: documented
 	* en/Gtk/CellRendererState.xml: documented
 	* en/Gtk/CellRenderer.xml: documented
+	* en/Gtk/ImageMenuItem.xml: documented
 	
 2003-07-17  Duncan Mak  <duncan@ximian.com>
 
